[package]
name = "image_comparison"
version = "0.1.0"
authors = ["Hannes Furmans <hannes.furmans@web.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray-image = "0.2.1"
image = "0.23.12"
ndarray = "0.13.1"
rayon = "1.5"